; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_errno.c_errno_map.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_errno.c_errno_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EPIPE = common dso_local global i64 0, align 8
@current = common dso_local global i32 0, align 4
@SIGPIPE_ = common dso_local global i32 0, align 4
@SIGINFO_NIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @errno_map() #0 {
  %1 = load i64, i64* @errno, align 8
  %2 = load i64, i64* @EPIPE, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = load i32, i32* @current, align 4
  %6 = load i32, i32* @SIGPIPE_, align 4
  %7 = load i32, i32* @SIGINFO_NIL, align 4
  %8 = call i32 @send_signal(i32 %5, i32 %6, i32 %7)
  br label %9

9:                                                ; preds = %4, %0
  %10 = load i64, i64* @errno, align 8
  %11 = call i32 @err_map(i64 %10)
  ret i32 %11
}

declare dso_local i32 @send_signal(i32, i32, i32) #1

declare dso_local i32 @err_map(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
